--- a/style.css
+++ b/style.css
@@ -18,10 +18,12 @@ body {
 	color: white;
 	height: 90vh;
 	width: 80vw;
+	max-width: 300px;
 	margin: auto;
 	border-radius: 1rem;
 	display: flex;
 	flex-flow: column wrap;
+	justify-content: space-between;
 }
 
 .header {
@@ -29,6 +31,7 @@ body {
 	box-sizing: border-box;
 	justify-content: space-between;
 	padding: 1.5rem;
+	color: #f0f0f0;
 }
 
 .song-wrapper {
@@ -49,6 +52,9 @@ body {
 	margin: 0.5rem;
 	border-radius: 50%;
 	background-color: white;
+	background-image: url("./img.jpg");
+	background-position: center center;
+	background-size: cover;
 }
 
 .song-info {
@@ -66,11 +72,73 @@ body {
 }
 
 .song-info-artist,
-.song-info-genre {
+.song-info-album {
 	color: #f0f0f0;
 	font-size: 14px;
 }
 
-.song-info-genre {
+.song-info-album {
 	color: #8f8f8f;
+}
+
+.player-wrapper {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	font-size: 1rem;
+	color: #8f8f8f;
+}
+
+.player-wrapper > i {
+	cursor: pointer;
+}
+
+.player-move-btn {
+	font-size: 2.5rem;
+	color: #f0f0f0;
+}
+
+.player-state-btn {
+	font-size: 3rem;
+	color: #ae80d6;
+}
+
+.volume-wrapper {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	margin: 2rem 0.5rem;
+}
+
+.volume-bar {
+	width: 60%;
+	position: relative;
+}
+
+.volume-bar .main {
+	width: 100%;
+	height: 5px;
+	background-color: #ae80d699;
+}
+
+.volume-bar .current {
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 5px;
+	width: 50%;
+	background-color: #ae80d6;
+}
+
+.volume-bar .current::after {
+	content: "";
+	display: inline-block;
+	width: 9px;
+	height: 9px;
+	border-radius: 50%;
+	background-color: #ae80d6;
+	box-shadow: 0 0 3px #1f1f1f;
+	position: absolute;
+	left: 100%;
+	top: -2px;
 }
