--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700&display=swap');
+
 body {
 	margin: 0;
 	padding: 0;
@@ -12,6 +15,7 @@ body {
 		rgba(62, 30, 242, 1) 0%,
 		rgba(174, 128, 214, 1) 100%
 	);
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 .main-wrapper {
 	background-color: #1f1f1f;
@@ -30,7 +34,7 @@ body {
 	display: flex;
 	box-sizing: border-box;
 	justify-content: space-between;
-	padding: 1.5rem;
+	margin: 1.5rem;
 	color: #f0f0f0;
 }
 
@@ -42,19 +46,27 @@ body {
 }
 
 .song-thumb-wrapper {
-	border: 10px solid #ae80d6;
-	border-radius: 50%;
+	position: relative;
+	width: 200px;
+	height: 200px;
 }
 
 .song-thumb {
-	width: 150px;
-	height: 150px;
-	margin: 0.5rem;
+	width: 160px;
+	height: 160px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	border-radius: 50%;
 	background-color: white;
 	background-image: url("./img.jpg");
 	background-position: center center;
 	background-size: cover;
+}
+
+.song-progress {
+	transform: rotate(-90deg);
 }
 
 .song-info {
@@ -64,17 +76,20 @@ body {
 
 .song-info-title {
 	display: inline-block;
-	margin-bottom: 5px;
 	color: rgba(174, 128, 214, 1);
 	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-size: 16px;
+	letter-spacing: 10px;
+	margin-right: -10px;
+	font-size: 20px;
+	font-weight: bold;
+	font-family: 'Vibes', cursive;
 }
 
 .song-info-artist,
 .song-info-album {
 	color: #f0f0f0;
-	font-size: 14px;
+	letter-spacing: 1px;
+	font-size: 16px;
 }
 
 .song-info-album {
@@ -107,7 +122,11 @@ body {
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	margin: 2rem 0.5rem;
+	margin: 1.5rem;
+}
+
+.volume-wrapper > i {
+	width: 20px;
 }
 
 .volume-bar {
@@ -118,7 +137,8 @@ body {
 .volume-bar .main {
 	width: 100%;
 	height: 5px;
-	background-color: #ae80d699;
+	border-radius: 10px;
+	background-color: #4d3f61;
 }
 
 .volume-bar .current {
@@ -127,6 +147,7 @@ body {
 	top: 0;
 	height: 5px;
 	width: 50%;
+	border-radius: 10px;
 	background-color: #ae80d6;
 }
 
