--- a/style.css
+++ b/style.css
@@ -69,10 +69,12 @@ body {
 	background-image: url("./img.jpg");
 	background-position: center center;
 	background-size: cover;
+	transition: all ease-in-out 0.5s;
 }
 
 .song-progress {
 	transform: rotate(-90deg);
+	transition: all linear 0.1s;
 }
 
 .song-info {
