--- a/style.css
+++ b/style.css
@@ -1,183 +1,187 @@
-@import url('https://fonts.googleapis.com/css?family=Vibes&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Vibes&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700&display=swap");
 
 body {
-	margin: 0;
-	padding: 0;
-	height: 100vh;
-	width: 100vw;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: rgb(62, 30, 242);
-	background: linear-gradient(
-		315deg,
-		rgba(62, 30, 242, 1) 0%,
-		rgba(174, 128, 214, 1) 100%
-	);
-	font-family: 'Yanone Kaffeesatz', sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(62, 30, 242);
+  background: linear-gradient(
+    315deg,
+    rgba(62, 30, 242, 1) 0%,
+    rgba(174, 128, 214, 1) 100%
+  );
+  font-family: "Yanone Kaffeesatz", sans-serif;
 }
 
 .main-wrapper {
-	background-color: #1f1f1f;
-	color: white;
-	height: 90vh;
-	width: 80vw;
-	max-width: 300px;
-	max-height: 500px;
-	margin: auto;
-	border-radius: 1rem;
-	display: flex;
-	flex-flow: column wrap;
-	justify-content: space-between;
+  background-color: #1f1f1f;
+  color: white;
+  height: 90vh;
+  width: 80vw;
+  max-width: 300px;
+  max-height: 500px;
+  margin: auto;
+  border-radius: 1rem;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
 }
 
 .header {
-	display: flex;
-	box-sizing: border-box;
-	justify-content: space-between;
-	margin: 1.5rem;
-	color: #f0f0f0;
+  display: flex;
+  box-sizing: border-box;
+  justify-content: space-between;
+  margin: 1.5rem;
+  color: #f0f0f0;
 }
 
 .header > i {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .song-wrapper {
-	display: flex;
-	flex-flow: column wrap;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .song-thumb-wrapper {
-	position: relative;
-	width: 200px;
-	height: 200px;
+  position: relative;
+  width: 200px;
+  height: 200px;
 }
 
 .song-thumb {
-	width: 160px;
-	height: 160px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	border-radius: 50%;
-	background-color: white;
-	background-position: center center;
-	background-size: cover;
-	transition: all ease-in-out 0.5s;
+  width: 160px;
+  height: 160px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: white;
+  background-position: center center;
+  background-size: cover;
+  transition: all ease-in-out 0.5s;
 }
 
 .song-progress {
-	transform: rotate(-90deg);
-	transition: all linear 0.1s;
+  transform: rotate(-90deg);
+  transition: all linear 0.1s;
 }
 
 .song-info {
-	text-align: center;
-	margin-top: 1rem;
+  text-align: center;
+  margin-top: 1rem;
 }
 
 .song-info-title {
-	display: inline-block;
-	color: rgba(174, 128, 214, 1);
-	text-transform: uppercase;
-	letter-spacing: 10px;
-	margin-right: -10px;
-	font-size: 20px;
-	font-weight: bold;
-	font-family: 'Vibes', cursive;
+  display: inline-block;
+  color: rgba(174, 128, 214, 1);
+  text-transform: uppercase;
+  letter-spacing: 10px;
+  margin-right: -10px;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Vibes", cursive;
 }
 
 .song-info-artist,
 .song-info-album {
-	color: #f0f0f0;
-	letter-spacing: 1px;
-	font-size: 16px;
+  color: #f0f0f0;
+  letter-spacing: 1px;
+  font-size: 16px;
 }
 
 .song-info-album {
-	color: #8f8f8f;
+  color: #8f8f8f;
 }
 
 .player-wrapper {
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	font-size: 1rem;
-	color: #8f8f8f;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1rem;
+  color: #8f8f8f;
 }
 
 .player-wrapper > i {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .player-move-btn {
-	font-size: 2.5rem;
-	color: #f0f0f0;
+  font-size: 2.5rem;
+  color: #f0f0f0;
 }
 
 .player-state-btn {
-	font-size: 3rem;
-	color: #ae80d6;
+  font-size: 3rem;
+  color: #ae80d6;
 }
 
 .player-load-btn {
-	animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
 }
 
 .volume-wrapper {
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	margin: 1.5rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 1.5rem;
 }
 
 .volume-wrapper > i {
-	width: 20px;
-	cursor: pointer;
+  width: 20px;
+  cursor: pointer;
 }
 
 .volume-bar {
-	width: 60%;
-	position: relative;
+  width: 60%;
+  position: relative;
 }
 
 .volume-bar #volume-slider {
-	-webkit-appearance: none;
-	outline: none;
-	margin: 0;
-	width: 100%;
-	height: 5px;
-	border-radius: 10px;
-	background-color: #4d3f61;
+  -webkit-appearance: none;
+  outline: none;
+  margin: 0;
+  width: 100%;
+  height: 5px;
+  border-radius: 10px;
+  background-color: #4d3f61;
 }
 
 .volume-bar #volume-slider::-webkit-slider-thumb {
-	-webkit-appearance: none;
-	width: 10px;
-	height: 10px;
-	border-radius: 50%;
-	background-color: #ae80d6;
-	box-shadow: 0 0 3px #1f1f1f;
-	cursor: pointer;
+  -webkit-appearance: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ae80d6;
+  box-shadow: 0 0 3px #1f1f1f;
+  cursor: pointer;
 }
 
 .volume-bar .volume-trail {
-	position: absolute;
-	top: 7px;
-	left: 0;
-	width: 48%;
-	height: 5px;
-	border-radius: 10px;
-	background-color: #ae80d6;
-	transition: width linear 0.1s;
+  position: absolute;
+  top: 7px;
+  left: 0;
+  width: 48%;
+  height: 5px;
+  border-radius: 10px;
+  background-color: #ae80d6;
+  transition: width linear 0.1s;
 }
 
 @keyframes spin {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
